# instagram

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  devserver.sh  docker-compose.debug.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  locustfile.py  nginx.conf  note.txt  prometheus.yml  pyproject.toml  run.sh
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml  tasks.json
.github/workflows/: README.md  deploy copy.yml  deploy.yml  dev.yml  prod.yml  stage.yml
.idx/: dev.nix
.idx/.data/mysql/: aria_log.00000001  aria_log_control
app/: main.py
app/core/: config.py  database.py  extensions.py  handlers.py  log_config.py  redis_client.py
app/logs/: config.py
app/v1/: __init__.py  enums.py  schedulers.py  storage.py  utils.py
cprofile/: view_profile_20250609_134319.prof  view_profile_20250803_094932.prof  view_profile_20250803_094954.prof  view_profile_20250803_142636.prof  view_profile_20250804_031645.prof  view_profile_20250804_031659.prof  view_profile_20250804_034839.prof  view_profile_20250804_035018.prof  view_profile_20250804_035117.prof  view_profile_20250804_045127.prof  view_profile_20250804_045207.prof  view_profile_20250804_045325.prof
migrations/: env.py
migrations/versions/: 0bea0a8e3da5_add_follow_model.py  3920cd933bef_init_database.py  3e9740235e01_initial_migration.py  95d7ad28d70d_add_like_model.py  cc7dfe3a5efb_change_enum_type_of_status.py  d789dfd68853_initialize_database.py
src/: main.py
tests/: locustfile.py  stress.py  test_auth.py  test_post.py  test_util.py
(+193 files in other folders)
